	fancyvrb configuration; found by deimi.
	<https://puszcza.gnu.org.ua/bugs/?308>

2016-06-05  Karl Berry  <karl@freefriends.org>

	* ProTex.sty,
	* AlProTex.sty: symlinks to ../protex, so dev versions will be used.
	* Makefile (common): depend on them.
	* tex4ht-c.tex,
	* tex4ht-4ht.tex: enable new protex option CodeLineNo.
	http://puszcza.gnu.org.ua/bugs/?136

2016-05-24  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (geometry.4ht): new file to turn off frame-drawing.
	<http://puszcza.gnu.org.ua/bugs/?303>
	* Makefile (tex4ht_4ht_derived): add it.

2016-05-22  Karl Berry  <karl@freefriends.org>

	* tex4ht-c.tex (search_file): return NULL rather than FALSE
	to placate MiKTeX.  Report from Mojca,
	https://sourceforge.net/p/miktex/bugs/2488.

2016-03-31  Karl Berry  <karl@freefriends.org>

	* Makefile (tex4ht_info_html4_derived, tex4ht_info_javahelp_derived,
	tex4ht_misc_derived): new variables, targets.
	
	* tex4ht-docbook.tex,
	* tex4ht-html-speech.tex,
	* tex4ht-html0.tex,
	* tex4ht-html32.tex,
	* tex4ht-ooffice.tex,
	* tex4ht-tei.tex: likewise make timestamps (\:today) in output
	off by default, enabled with timestamp option.  In css files
	and other contexts where an option is inconvenient, just remove them.
	
	* tex4ht-javahelp.tex,
	* tex4ht-docbook.tex: reference tug rather than ohio-state.edu
	web site.

2016-03-31  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): remove timestamp from the HTML4
	output.  It can be enabled with ``timestamp'' option.
	https://puszcza.gnu.org.ua/bugs/index.php?277

2016-03-16  Karl Berry  <karl@freefriends.org>

	* Makefile (tex4ht_4ht_derived): add biblatex.4ht.

2016-03-16  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (biblatex.4ht): support for biblatex 3.0.
	http://puszcza.gnu.org.ua/bugs/?273>

2016-02-01  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-noncjk.tex (pcrro8r.htf): Fixed some wrong characters.
        http://puszcza.gnu.org.ua/bugs/?271
